refactor: ExceptionUtil -> Debug feat: SearchSkriptHub.java 新增聊天记录预览(虽然可能发出去依然不显示) fix: AIRequest 修复Error判定